spacing fix

--- a/src/styles/Market.css
+++ b/src/styles/Market.css
@@ -1,19 +1,20 @@
 #listings-container {
+    --four: calc(25% - 10px);
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: var(--four) var(--four) var(--four) var(--four);
     gap: 10px;
 
 }
 
 @media only screen and (max-width: 1100px) {
-    #market-container {
-        grid-template-columns: auto auto auto;
+    #listings-container {
+        grid-template-columns: 33% 33% 33%;
     }
 }
 
 @media only screen and (max-width: 800px) {
-    #market-container {
-        grid-template-columns: auto auto;
+    #listings-container {
+        grid-template-columns: 50% 50%;
     }
 }
 
